refactor(hero): Update classNames and layout positioning for MealCard components

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@ body {
   @apply text-customLime-700 text-base font-bold;
 }
 
-.hero-images {
+.hero-cards {
   @apply relative flex justify-center;
 }
 
